working prototype, only 1d though.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
         <button type="button" class="button">Generate New</button>
       </form>
     </section>
-    <main id="mosaic-root" class="mosaic-root"></main>
-
+    <main class="mosaic">
+      <table class="table">
+        <tbody id="mosaic-root" class="mosaic-root"></tbody>
+    </main>
+    </table>
     <script src="app.js"></script>
   </body>
 </html>
