redone everything, and now it works =P

--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
           <input class="input input-fragment" type="color" id="fragment-color" value="#6BCDCC" />
           <label class="label" for="fragment-color">Fragment background color</label>
         </fieldset>
-        <button type="button" class="button">Generate New</button>
+        <button type="button" class="button" id="generate">Generate New</button>
       </form>
     </section>
-    <main class="mosaic">
-      <table class="table">
-        <tbody id="mosaic-root" class="mosaic-root"></tbody>
-    </main>
-    </table>
+    <main id="mosaic-root" class="mosaic-root"></main>
     <script src="app.js"></script>
   </body>
 </html>
